--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from '@/layouts/Layout.astro';
+import { getAllProducts } from '@/lib/products';
+import HomePageWithSearch from '@/components/HomePageWithSearch.tsx';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const allProducts = getAllProducts();
 ---
-
-<Layout>
-	<Welcome />
+<Layout title="Home - ElectroMart">
+  <HomePageWithSearch allProducts={allProducts} client:load />
 </Layout>
