--- a/src/pages/products.astro
+++ b/src/pages/products.astro
@@ -3,7 +3,6 @@ import Layout from '@/layouts/Layout.astro';
 import AllProductsPage from '@/components/AllProductsPage.tsx';
 ---
 
-<Layout title="Trio-God Store • Premium Electronics">
+<Layout title="Trio-God Store • All Products">
   <AllProductsPage client:load />
-  
 </Layout>
