--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,31 +8,25 @@ export interface Props {
 }
 
 const { title = 'ElectroMart' } = Astro.props;
----
 
+
+---
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/public/profile.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body class="min-h-screen flex flex-col font-sans">
+	<body class="min-h-screen flex flex-col font-sans bg-white text-gray-900 antialiased">
+	
 		<Header />
-		<main class="flex-1 max-w-5xl mx-auto p-4 w-full">
+		<main class="flex-1 w-full">
 			<slot />
 		</main>
 		<Footer />
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
