--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title = 'ElectroMart' } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/public/profile.png" />
+		<link rel="icon" type="image/png" href="/profile.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
